Made some adjustments that was required and removed OnClick and replaced it with addEventListener

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Number guesser</h1>
     <p>Think of a number between 1 and 100, that i have to guess</p>
     <div id="guess"></div>
-    <button onclick="startGuessing()">Start Guessing</button>
-    <button id="higher-btn" onclick="guessHigher()" disabled>Higher</button>
-    <button id="lower-btn" onclick="guessLower()" disabled>Lower</button>
-    <button onclick="correctGuess()">Correct</button>    
+    <button id="start-btn" >Start Guessing</button>
+    <button id="higher-btn" >Higher</button>
+    <button id="lower-btn" >Lower</button>
+    <button id="correct-btn">Correct</button>    
     <script src="script.js"></script>
 </body>
 </html>
